--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./images/carrossel1.jpg" class="d-block w-100" alt="text1">
+            <img src="images/carrossel1.jpg" class="d-block w-100" alt="text1">
           </div>
           <div class="carousel-item">
-            <img src="./images/carrossel2.jpg" class="d-block w-100" alt="text2">
+            <img src="images/carrossel2.jpg" class="d-block w-100" alt="text2">
           </div>
           <div class="carousel-item">
-            <img src="./images/carrossel3.jpg" class="d-block w-100" alt="text3">
+            <img src="images/carrossel3.jpg" class="d-block w-100" alt="text3">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
