--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Template</title>
     <link rel="icon" type="image/png" href="./images/logo-icon.jpg">
     
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"   rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Open+Sans:wght@300;400;600&family=Pacifico&display=swap" rel="stylesheet"/>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="stylesheet" href="styles/mobile.css">
@@ -40,26 +44,10 @@
             </div>
           </nav>
 
-          <div class="card" style="width: 10rem;">
-            <img src="./images/logotmpt.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Título</h5>
-              <p class="card-text">Bem vindo ao meu site!</p>
-            </div>
-            <ul class="list-group list-group-flush">
-              <li class="list-group-item">Facil</li>
-              <li class="list-group-item">Prático</li>
-              <li class="list-group-item">Moderno</li>
-            </ul>
-            <div class="card-body">
-              <a href="#" class="card-link">adicione seu link</a>
-            </div>
-          </div>
-
-          <div class="d-grid col-6 mx-auto">
+          <div class="testando">
             <button class="btn btn-primary" type="button" id="lins">Ir para...</button>
           </div>
-
+        
     </header>
 
     <main>
@@ -131,16 +119,23 @@
     </main>
     <br></br>
     <footer>
+      <div class="contato">
       <h5>Criador: Daniel SH.</h5>
       <h1>Me acompanhe nas redes sociais!</h1>
       <h4>Acesse:</h4>
       <div class="d-grid gap-2 d-md-block" id="contato">
-        <a href="https://github.com/danilins0"><button class="btn btn-primary" type="button">GitHub</button></a>
-        <a href="https://www.instagram.com/_.danilins._/?next=%2F"><button class="btn btn-primary" type="button">Instagram</button></a>
+        <a href="https://github.com/danilins0"><button class="btn btn-primary" type="button" id="btnGH">GitHub</button></a>
+        <a href="https://www.instagram.com/_.danilins._/?next=%2F"><button class="btn btn-primary" type="button" id="btnIG">Instagram</button></a>
       </div>
+    </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js" integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA==" crossorigin="anonymous"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/shortcuts/sticky.min.js" integrity="sha512-O5YCLUxCY2OBc4rfpnKUIgE4LGuCiW8CrJ7ty4hvkBAAKUOnlbomEFWd3a6ruRnFvO3LG2wiaGiJ1heOvdppvA==" crossorigin="anonymous"></script>
     <script src="scripts/script.js"></script>
 </body>
 </html>
