--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     </header>
 
     <main>
+
       <div id="carouselExampleIndicators" class="carousel slide">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -59,13 +60,13 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./images/carrossel1.jpg" class="d-block w-100" alt="text1">
+            <img src="./images/carrossel2.jpg" class="d-flex justify-content-center align-items-center w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./images/carrossel2.jpg" class="d-block w-100" alt="text2">
+            <img src="./images/carrossel3.jpg" class="d-flex justify-content-center align-items-center w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="./images/carrossel3.jpg" class="d-block w-100" alt="text3">
+            <img src="./images/carrossel1.jpg" class="d-flex justify-content-center align-items-center w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
